2022-09-10T01:59:40Z:
* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3026347403
* notice: last 14d: unq all: 6 14
* notice: prev accum: outdated-unq outdated-all / unq all: 81 119 / 92 135
* notice: next accum: outdated-unq outdated-all / unq all: 86 125 / 95 139
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2022-08-26] / []

2022-09-09T16:26:14Z:
* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3023889543
* notice: last 14d: unq all: 6 16
* notice: prev accum: outdated-unq outdated-all / unq all: 81 119 / 95 139
* notice: next accum: outdated-unq outdated-all / unq all: 81 119 / 92 135
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -3 -4 / +5 +6 -3 -4 / 2 2
* notice: removed / changed dates: [] / [2022-08-26]

2022-09-02T08:22:29Z:
* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/2977639866
* notice: last 14d: unq all: 9 20
* notice: prev accum: outdated-unq outdated-all / unq all: 81 119 / 94 138
* notice: next accum: outdated-unq outdated-all / unq all: 81 119 / 95 139
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2022-09-02]

2022-09-01T08:24:32Z:
* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/2970054425
* notice: last 14d: unq all: 8 19
* notice: prev accum: outdated-unq outdated-all / unq all: 80 117 / 94 138
* notice: next accum: outdated-unq outdated-all / unq all: 81 119 / 94 138
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2022-08-18] / []

2022-09-01T01:48:34Z:
* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/2968310770
* notice: last 14d: unq all: 8 21