@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-09-10T01:59:40Z",
+  "timestamp" : "2022-09-11T08:21:33Z",
   "count_outdated" : 125,
   "uniques_outdated" : 86,
-  "count" : 139,
-  "uniques" : 95,
+  "count" : 140,
+  "uniques" : 96,
   "clones" : [
     {
       "timestamp": "2022-08-29T00:00:00Z",
@@ -21,6 +21,13 @@
     },
     {
       "timestamp": "2022-09-02T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
+    },
+    {
+      "timestamp": "2022-09-11T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "uniques": 1,
