@@ -1,5 +1,5 @@
 {
-  "count": 14,
+  "count": 15,
   "uniques": 6,
   "clones": [
     {
@@ -14,6 +14,11 @@
     },
     {
       "timestamp": "2022-09-02T00:00:00Z",
+      "count": 1,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2022-09-11T00:00:00Z",
       "count": 1,
       "uniques": 1
     }
