@@ -1,3 +1,11 @@
+2022-09-11T08:21:33Z:
+* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3031105075
+* notice: last 14d: unq all: 6 15
+* notice: prev accum: outdated-unq outdated-all / unq all: 86 125 / 95 139
+* notice: next accum: outdated-unq outdated-all / unq all: 86 125 / 96 140
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [] / [2022-09-11]
+
 2022-09-10T01:59:40Z:
 * notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3026347403
 * notice: last 14d: unq all: 6 14
